--- a/FPS_Modules/FPS_UnusualKills/translations/FPS_UnusualKills.phrases.txt
+++ b/FPS_Modules/FPS_UnusualKills/translations/FPS_UnusualKills.phrases.txt
@@ -5,60 +5,70 @@
 		"en"			"Additional points"
 		"ru"			"Дополнительные поинты"
 		"ua"			"Додаткові поінти"
+		"tr"			""
 	}
 	"op"
 	{
 		"en"			"for first kill"
 		"ru"			"за первое убийство"
 		"ua"			"за перше вбивство"
+		"tr"			""
 	}
 	"penetrated"
 	{
 		"en"			"for killing through an obstacle"
 		"ru"			"за убийство через препятствие"
 		"ua"			"за вбивство через перешкоду"
+		"tr"			""
 	}
 	"no_scope"
 	{
 		"en"			"for killing by no scope"
 		"ru"			"за убийство без прицела"
 		"ua"			"за вбивство без прицілу"
+		"tr"			""
 	}
 	"run"
 	{
 		"en"			"for killing on run"
 		"ru"			"за убийство на бегу"
 		"ua"			"за вбивство на бігу"
+		"tr"			""
 	}
 	"jump"
 	{
 		"en"			"for killing in jump"
 		"ru"			"за убийство в прыжке"
 		"ua"			"за вбивство в стрибку"
+		"tr"			""
 	}
 	"flash"
 	{
 		"en"			"for killing, being blinded flashbang"
 		"ru"			"за убийство, будучи ослепленным флешкой"
 		"ua"			"за вбивство, будучи засліпленим флешкою"
+		"tr"			""
 	}
 	"smoke"
 	{
 		"en"			"for killing being in smoke"
 		"ru"			"за убийство в дым"
 		"ua"			"за вбивство в дим"
+		"tr"			""
 	}
 	"whirl"
 	{
 		"en"			"for killing by with reversal"
 		"ru"			"за убийство с разворота"
 		"ua"			"за вбивство з розвороту"
+		"tr"			""
 	}
 	"last_clip"
 	{
 		"en"			"for killing by with a last clip"
 		"ru"			"за убийство последним патроном"
 		"ua"			"за вбивство останнім патроном"
+		"tr"			""
 	}
 
 	// MENU ------------
@@ -68,6 +78,7 @@
 		"en"			"Statistics on unusual kills"
 		"ru"			"Cтатистика по необычным убийствам"
 		"ua"			"Cтатистика незвичайних вбивств"
+		"tr"			"Ender vuruşların istatistikleri"
 	}
 	"Menu_op"
 	{
@@ -75,6 +86,7 @@
 		"en"			"Open killing: {1} ({2}%%)"
 		"ru"			"Первых убийств: {1} ({2}%%)"
 		"ua"			"Перше вбивств: {1} ({2}%%)"
+		"tr"			"İlk Öldürme: {1} ({2}%%)"
 	}
 	"Menu_penetrated"
 	{
@@ -82,6 +94,7 @@
 		"en"			"Penetrates: {1} ({2}%%)"
 		"ru"			"Прострелов: {1} ({2}%%)"
 		"ua"			"За простріл: {1} ({2}%%)"
+		"tr"			"Delici: {1} ({2}%%)"
 	}
 	"Menu_no_scope"
 	{
@@ -89,6 +102,7 @@
 		"en"			"NoScopes: {1} ({2}%%)"
 		"ru"			"Без прицела: {1} ({2}%%)"
 		"ua"			"Перше вбивство: {1} ({2}%%)"
+		"tr"			"Dürbünsüz: {1} ({2}%%)"
 	}
 	"Menu_run"
 	{
@@ -96,6 +110,7 @@
 		"en"			"On the run: {1} ({2}%%)"
 		"ru"			"На бегу: {1} ({2}%%)"
 		"ua"			"На бігу: {1} ({2}%%)"
+		"tr"			"Hareketli: {1} ({2}%%)"
 	}
 	"Menu_jump"
 	{
@@ -103,6 +118,7 @@
 		"en"			"A jump: {1} ({2}%%)"
 		"ru"			"В прыжке: {1} ({2}%%)"
 		"ua"			"В стрибку: {1} ({2}%%)"
+		"tr"			"Havada: {1} ({2}%%)"
 	}
 	"Menu_flash"
 	{
@@ -110,6 +126,7 @@
 		"en"			"A light grenade: {1} ({2}%%)"
 		"ru"			"С ослеплением от световой гранаты: {1} ({2}%%)"
 		"ua"			"З осліпленням від светової гранати: {1} ({2}%%)"
+		"tr"			"Kör: {1} ({2}%%)"
 	}
 	"Menu_smoke"
 	{
@@ -117,6 +134,7 @@
 		"en"			"In the smoke: {1} ({2}%%)"
 		"ru"			"В дым: {1} ({2}%%)"
 		"ua"			"В дим: {1} ({2}%%)"
+		"tr"			"Sis: {1} ({2}%%)"
 	}
 	"Menu_whirl"
 	{
@@ -124,6 +142,7 @@
 		"en"			"With a reversal: {1} ({2}%%)"
 		"ru"			"С разворота: {1} ({2}%%)"
 		"ua"			"З розвороту: {1} ({2}%%)"
+		"tr"			"U dönüşü: {1} ({2}%%)"
 	}
 	"Menu_last_clip"
 	{
@@ -131,6 +150,7 @@
 		"en"			"Last clip: {1} ({2}%%)"
 		"ru"			"Последним патроном: {1} ({2}%%)"
 		"ua"			"Останнім патроном: {1} ({2}%%)"
+		"tr"			"Son mermi: {1} ({2}%%)"
 	}
 	
 	"UnusualKillsTop"
@@ -138,6 +158,7 @@
 		"en"			"Top on unusual kills"
 		"ru"			"Top по необычным убийствам"
 		"ua"			"Top по незвичайних вбивствах"
+		"tr"			""
 	}
 	"Top_Open"
 	{
@@ -145,59 +166,69 @@
 		"en"			"{1} - {2} kills - {3}"
 		"ru"			"{1} - {2} Киллов - {3}"
 		"ua"			"{1} - {2} Вбивств - {3}"
+		"tr"			""
 	}
 	"Top_op"
 	{
 		"en"			"TOP-10 by open kills"
 		"ru"			"TOP-10 по первым убийствам"
 		"ua"			"TOP-10 перших вбивств"
+		"tr"			"En çok ilk öldüren 10 oyuncu"
 	}
 	"Top_penetrated"
 	{
 		"en"			"TOP-10 by penetration kills"
 		"ru"			"TOP-10 по убийствам с прострелом"
 		"ua"			"TOP-10 вбивств за простріл"
+		"tr"			"En çok delici vuruş yapan 10 oyuncu"
 	}
 	"Top_no_scope"
 	{
 		"en"			"TOP-10 by NoScope kills"
 		"ru"			"TOP-10 по убийствам без прицела"
 		"ua"			"TOP-10 вбивств без прицілу"
+		"tr"			"En çok dürbünsüz vuruş yapan 10 oyuncu"
 	}
 	"Top_run"
 	{
 		"en"			"TOP-10 by run kills"
 		"ru"			"TOP-10 по убийствам на бегу"
 		"ua"			"TOP-10 вбивств на бігу"
+		"tr"			"En çok hareketli vuruş yapan 10 oyuncu"
 	}
 	"Top_jump"
 	{
 		"en"			"TOP-10 by jump kills"
 		"ru"			"TOP-10 по убийствам в прыжке"
 		"ua"			"TOP-10 вбивств в стрибку"
+		"tr"			"En çok havada vuruş yapan 10 oyuncu"
 	}
 	"Top_flash"
 	{
 		"en"			"TOP-10 by light grenade kills"
 		"ru"			"TOP-10 по убийствам с ослеплением от световой гранаты"
 		"ua"			"TOP-10 вбивств з осліпленням від світлової гранати"
+		"tr"			"En çok kör vuruş yapan 10 oyuncu"
 	}
 	"Top_smoke"
 	{
 		"en"			"TOP-10 by in the smoke kills"
 		"ru"			"TOP-10 по убийствам в дым"
 		"ua"			"TOP-10 вбивств в дим"
+		"tr"			"En çok sis  vuruşu yapan 10 oyuncu"
 	}
 	"Top_whirl"
 	{
 		"en"			"TOP-10 by with a reversal kills"
 		"ru"			"TOP-10 по убийствам с разворота"
 		"ua"			"TOP-10 вбивств з розвороту"
+		"tr"			"En çok U vuruşu yapan 10 oyuncu"
 	}
 	"Top_last_clip"
 	{
 		"en"			"TOP-10 by last clip kills"
 		"ru"			"TOP-10 по убийствам последним патроном"
 		"ua"			"TOP-10 вбивств останнім патроном"
+		"tr"			"En çok son mermi vuruşu yapan 10 oyuncu"
 	}
 }
