--- a/translations/FirePlayersStatsRanks.phrases.txt
+++ b/translations/FirePlayersStatsRanks.phrases.txt
@@ -5,6 +5,7 @@
 		"en"		"Calibration"
 		"ru"		"Калибровка"
 		"ua"		"Калібрування"
+		"tr"		"Kalibrasyon" 
 	}
 
 	// Аналогично можете добавлять все звания. Пример:
