Add forvard FPS_OnResetGeneralStats. Add check reset stas cvar in FPS_MapsStats. README.md translated into English

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -98,3 +98,5 @@
 		Added command sm_fps_reset_all_stats.
 1.5.4 - Slight logic optimization.
 		Fixed message display when changing teams from observers to T/CT.
+		In information menu, an item with 0 points will be hidden.
+		Add forvard FPS_OnResetGeneralStats.
