--- a/CHANGELOG
+++ b/CHANGELOG
@@ -99,4 +99,4 @@
 1.5.4 - Slight logic optimization.
 		Fixed message display when changing teams from observers to T/CT.
 		In information menu, an item with 0 points will be hidden.
-		Add forvard FPS_OnResetGeneralStats.
+		Add forvard FPS_OnResetGeneralStats and FPS_OnFPSResetAllStats.
