Add cvar sm_fps_reset_modules_stats.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -101,4 +101,5 @@
 		In information menu, an item with 0 points will be hidden.
 		Add forvard FPS_OnResetGeneralStats and FPS_OnFPSResetAllStats.
 		SteamWorks extension is now optional.
+		Add cvar sm_fps_reset_modules_stats.
 		
